LMSA-9713 progress